##
## Process this file with automake to produce Makefile.in
##

AM_CPPFLAGS = -pedantic -Wall -pipe -W -Wfloat-equal -Wcast-align -Wsign-compare -Wpointer-arith -Wswitch -Wunknown-pragmas -Wconversion -Wundef -Wcast-qual -ansi

noinst_PROGRAMS = register_example disco_example adhoc_example roster_example privatexml_example component_example \
                  bookmarkstorage_example annotations_example privacylist_example message_example flexoff_example \
                  ibb_example vcard_example reset_example muc_example

register_example_SOURCES = register_example.cpp
register_example_LDADD = ../libgloox.la $(LDFLAGS)
register_example_CFLAGS = $(CPPFLAGS)

disco_example_SOURCES = disco_example.cpp
disco_example_LDADD = ../libgloox.la $(LDFLAGS)
disco_example_CFLAGS = $(CPPFLAGS)

adhoc_example_SOURCES = adhoc_example.cpp
adhoc_example_LDADD = ../libgloox.la $(LDFLAGS)
adhoc_example_CFLAGS = $(CPPFLAGS)

roster_example_SOURCES = roster_example.cpp
roster_example_LDADD = ../libgloox.la $(LDFLAGS)
roster_example_CFLAGS = $(CPPFLAGS)

privatexml_example_SOURCES = privatexml_example.cpp
privatexml_example_LDADD = ../libgloox.la $(LDFLAGS)
privatexml_example_CFLAGS = $(CPPFLAGS)

component_example_SOURCES = component_example.cpp
component_example_LDADD = ../libgloox.la $(LDFLAGS)
component_example_CFLAGS = $(CPPFLAGS)

bookmarkstorage_example_SOURCES = bookmarkstorage_example.cpp
bookmarkstorage_example_LDADD = ../libgloox.la $(LDFLAGS)
bookmarkstorage_example_CFLAGS = $(CPPFLAGS)

annotations_example_SOURCES = annotations_example.cpp
annotations_example_LDADD = ../libgloox.la $(LDFLAGS)
annotations_example_CFLAGS = $(CPPFLAGS)

privacylist_example_SOURCES = privacylist_example.cpp
privacylist_example_LDADD = ../libgloox.la $(LDFLAGS)
privacylist_example_CFLAGS = $(CPPFLAGS)

message_example_SOURCES = message_example.cpp
message_example_LDADD = ../libgloox.la $(LDFLAGS)
message_example_CFLAGS = $(CPPFLAGS)

flexoff_example_SOURCES = flexoff_example.cpp
flexoff_example_LDADD = ../libgloox.la $(LDFLAGS)
flexoff_example_CFLAGS = $(CPPFLAGS)

ibb_example_SOURCES = ibb_example.cpp
ibb_example_LDADD = ../libgloox.la $(LDFLAGS)
ibb_example_CFLAGS = $(CPPFLAGS)

vcard_example_SOURCES = vcard_example.cpp
vcard_example_LDADD = ../libgloox.la $(LDFLAGS)
vcard_example_CFLAGS = $(CPPFLAGS)

reset_example_SOURCES = reset_example.cpp
reset_example_LDADD = ../libgloox.la $(LDFLAGS)
reset_example_CFLAGS = $(CPPFLAGS)

muc_example_SOURCES = muc_example.cpp
muc_example_LDADD = ../libgloox.la $(LDFLAGS)
muc_example_CFLAGS = $(CPPFLAGS)

