##
## Process this file with automake to produce Makefile.in
##

AM_CPPFLAGS = -pedantic -Wall -pipe -W -Wfloat-equal -Wcast-align -Wsign-compare \
              -Wpointer-arith -Wswitch -Wunknown-pragmas -Wconversion -Wundef \
              -Wcast-qual -ansi -Wno-long-long -DGLOOX_IMPORTS

noinst_PROGRAMS = adhoc_example \
                  annotations_example \
                  bookmarkstorage_example \
                  bosh_example \
                  component_example \
                  disco_example \
                  e2ee_client \
                  e2ee_server \
                  flexoff_example \
                  ft_recv \
                  ft_send \
                  message_example \
                  muc_example \
                  privatexml_example \
                  privacylist_example \
                  pubsub_example \
                  register_example \
                  reset_example \
                  roster_example \
                  vcard_example

adhoc_example_SOURCES = adhoc_example.cpp
adhoc_example_LDADD = ../libgloox.la
adhoc_example_LDFLAGS = $(PTHREAD_CFLAGS)

annotations_example_SOURCES = annotations_example.cpp
annotations_example_LDADD = ../libgloox.la
annotations_example_LDFLAGS = $(PTHREAD_CFLAGS)

bookmarkstorage_example_SOURCES = bookmarkstorage_example.cpp
bookmarkstorage_example_LDADD = ../libgloox.la
bookmarkstorage_example_LDFLAGS = $(PTHREAD_CFLAGS)

bosh_example_SOURCES = bosh_example.cpp
bosh_example_LDADD = ../libgloox.la
bosh_example_LDFLAGS = $(PTHREAD_CFLAGS)

component_example_SOURCES = component_example.cpp
component_example_LDADD = ../libgloox.la
component_example_LDFLAGS = $(PTHREAD_CFLAGS)

disco_example_SOURCES = disco_example.cpp
disco_example_LDADD = ../libgloox.la
disco_example_LDFLAGS = $(PTHREAD_CFLAGS)

e2ee_client_SOURCES = e2ee_client.cpp
e2ee_client_LDADD = ../libgloox.la
e2ee_client_LDFLAGS = $(PTHREAD_CFLAGS)

e2ee_server_SOURCES = e2ee_server.cpp
e2ee_server_LDADD = ../libgloox.la
e2ee_server_LDFLAGS = $(PTHREAD_CFLAGS)

flexoff_example_SOURCES = flexoff_example.cpp
flexoff_example_LDADD = ../libgloox.la
flexoff_example_LDFLAGS = $(PTHREAD_CFLAGS)

ft_recv_SOURCES = ft_recv.cpp
ft_recv_LDADD = ../libgloox.la
ft_recv_LDFLAGS = $(PTHREAD_CFLAGS)

ft_send_SOURCES = ft_send.cpp
ft_send_LDADD = ../libgloox.la
ft_send_LDFLAGS = $(PTHREAD_CFLAGS)

message_example_SOURCES = message_example.cpp
message_example_LDADD = ../libgloox.la
message_example_LDFLAGS = $(PTHREAD_CFLAGS)

muc_example_SOURCES = muc_example.cpp
muc_example_LDADD = ../libgloox.la
muc_example_LDFLAGS = $(PTHREAD_CFLAGS)

privatexml_example_SOURCES = privatexml_example.cpp
privatexml_example_LDADD = ../libgloox.la
privatexml_example_LDFLAGS = $(PTHREAD_CFLAGS)

privacylist_example_SOURCES = privacylist_example.cpp
privacylist_example_LDADD = ../libgloox.la
privacylist_example_LDFLAGS = $(PTHREAD_CFLAGS)

pubsub_example_SOURCES = pubsub_example.cpp
pubsub_example_LDADD = ../libgloox.la
pubsub_example_LDFLAGS = $(PTHREAD_CFLAGS)

register_example_SOURCES = register_example.cpp
register_example_LDADD = ../libgloox.la
register_example_LDFLAGS = $(PTHREAD_CFLAGS)

reset_example_SOURCES = reset_example.cpp
reset_example_LDADD = ../libgloox.la
reset_example_LDFLAGS = $(PTHREAD_CFLAGS)

roster_example_SOURCES = roster_example.cpp
roster_example_LDADD = ../libgloox.la
roster_example_LDFLAGS = $(PTHREAD_CFLAGS)

vcard_example_SOURCES = vcard_example.cpp
vcard_example_LDADD = ../libgloox.la
vcard_example_LDFLAGS = $(PTHREAD_CFLAGS)
