add_subdirectory( adhoc )
add_subdirectory( adhoccommand )
add_subdirectory( adhoccommandnote )
add_subdirectory( amprule )
add_subdirectory( amp )
add_subdirectory( base64 )
add_subdirectory( capabilities )
add_subdirectory( chatstatefilter )
add_subdirectory( client )
add_subdirectory( clientbase )
add_subdirectory( connectionbosh )
add_subdirectory( dataform )
add_subdirectory( dataformfield )
add_subdirectory( dataformreported )
add_subdirectory( dataformitem )
add_subdirectory( delayeddelivery )
add_subdirectory( discoinfo )
add_subdirectory( discoitems )
add_subdirectory( disco )
add_subdirectory( error )
add_subdirectory( featureneg )
add_subdirectory( flexoffline )
add_subdirectory( flexofflineoffline )
add_subdirectory( gpgencrypted )
add_subdirectory( gpgsigned )
add_subdirectory( inbandbytestreamibb )
add_subdirectory( inbandbytestream )
add_subdirectory( iq )
add_subdirectory( jid )
add_subdirectory( jinglesessionjingle )
add_subdirectory( jinglertp )
add_subdirectory( jingleiceudp )
add_subdirectory( jinglerawudp )
add_subdirectory( jinglesession )
add_subdirectory( lastactivity )
add_subdirectory( lastactivityquery )
add_subdirectory( md5 )
add_subdirectory( message )
add_subdirectory( messageeventfilter )
add_subdirectory( mucroommuc )
add_subdirectory( mucroommucadmin )
add_subdirectory( mucroommucowner )
add_subdirectory( mucroommucuser )
add_subdirectory( nickname )
add_subdirectory( nonsaslauthquery )
add_subdirectory( nonsaslauth )
add_subdirectory( oob )
add_subdirectory( parser )
add_subdirectory( prep )
add_subdirectory( presence )
add_subdirectory( privacymanager )
add_subdirectory( privacymanagerquery )
add_subdirectory( privatexml )
add_subdirectory( pubsubmanagerpubsub )
add_subdirectory( pubsubmanager )
add_subdirectory( pubsubevent )
add_subdirectory( receipt )
add_subdirectory( registrationquery )
add_subdirectory( registration )
add_subdirectory( rostermanagerquery )
add_subdirectory( rostermanager )
add_subdirectory( searchquery )
add_subdirectory( search )
add_subdirectory( sha )
add_subdirectory( shim )
add_subdirectory( simanager )
add_subdirectory( simanagersi )
add_subdirectory( stanzaextensionfactory )
add_subdirectory( subscription )
add_subdirectory( tag )
add_subdirectory( tlsgnutls )
add_subdirectory( tlsopenssl )
add_subdirectory( uniquemucroomunique )
add_subdirectory( vcard )
add_subdirectory( vcardupdate )
add_subdirectory( xpath )
add_subdirectory( zlib )
add_subdirectory( util )
