##
## Process this file with automake to produce Makefile.in
##

AM_CPPFLAGS = -pedantic -Wall -pipe -W -Wfloat-equal -Wcast-align -Wsign-compare -Wpointer-arith -Wswitch -Wunknown-pragmas -Wconversion -Wundef -Wcast-qual -ansi

noinst_PROGRAMS = dataform_test

dataform_test_SOURCES = dataform_test.cpp ../../tag.cpp ../../dataform.cpp ../../dataformbase.cpp ../../dataformfield.cpp
dataform_test_LDADD =
dataform_test_CFLAGS = $(CPPFLAGS)

