##
## Process this file with automake to produce Makefile.in
##

AM_CPPFLAGS = -pedantic -Wall -pipe -W -Wfloat-equal -Wcast-align -Wsign-compare -Wpointer-arith -Wswitch -Wunknown-pragmas -Wconversion -Wundef -Wcast-qual -ansi

noinst_PROGRAMS = dataformfield_test

dataformfield_test_SOURCES = dataformfield_test.cpp ../../tag.cpp ../../dataformfield.cpp
dataformfield_test_LDADD =
dataformfield_test_CFLAGS = $(CPPFLAGS)

